# brad-schmett-remarketing

./: .gitignore  pyproject.toml
.github/workflows/: scrape.yml
docs/: feed.csv
scripts/: reformat_feed.py
src/scraper/: browser.py  cli.py  config.py  discover.py  extract.py  feed.py  images.py  models.py  state.py
state/: listings.json
