[project]
name = "brad-schmett-remarketing"
version = "0.1.0"
description = "Google Ads Dynamic Remarketing feed scraper for bradschmett.com"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.49",
    "typer>=0.15",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "loguru>=0.7",
    "rich>=13.9",
]

[project.scripts]
scraper = "scraper.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scraper"]

[tool.ruff]
target-version = "py311"
line-length = 100
